2010-02-27  Abel Cheung  <abelcheung@gmail.com>

	* notation/mup.php, wp-scorerender.php, scorerender-admin.php:
	- Drop DPI definition which is not widely used.
	* scorerender-admin.php:
	- Sets minimum score width to 100px instead.

2010-02-27  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- Always log via error_log() instead of writing custom file.
	- Fix a bug where cache dir setting is not retrieved if color
	  is given via URL (thus image not found).
	  
2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_get_def_settings):
	- Make default setting static, so it can be reused later.
	
2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php (format_error_msg):
	- Make this func public, it can be useful even when outside class.
	* wp-scorerender.php:
	- Use it globally.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- (update_options): Fix incorrect parenthesis enclosing.
	- (admin_page): More elaborate help, also explaning new shortcode

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_shortcode_handler) Also checks existance of GD
	  extension before result output.
	- (scorerender_return_fragment_ok) New func.
	- (scorerender_return_fragment_error) New func.
	- (scorerender_process_content) Removed, now split into the 2
	  new funcs above.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (get_raw_input): New func, for getting unprocessed music code.
	- (render): Also remove intermediate file, sometimes those files
	  exists even when initial rendering step failed.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- Don't allocate unused variable to preg_match.

2010-02-26  Abel Cheung  <abelcheung@gmail.com>

	* notation/guido.php:
	- Use more precise sizing and zoom ratio so that image will
	  not look blurred.

2010-02-25  Abel Cheung  <abelcheung@gmail.com>
